# static-prebuild

./: Cargo.toml  README.md
static-prebuild-macros/: Cargo.toml
static-prebuild-macros/res/: test.json
static-prebuild-macros/src/: lib.rs
static-prebuild-macros/tests/: macro.rs  test_type.rs
static-prebuild-models/: Cargo.toml
static-prebuild-models/src/: lib.rs
