[package]
name = "static-prebuild-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
static-prebuild-models = { path = "../static-prebuild-models" }

serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.116"
syn-helpers = { version = "0.5", features = ["syn-extra-traits"] }